# detox-jar

./: README.md  TODO  detox.py  detox.toml  pyproject.toml  test_foo.py
detox/: __main__.py  logger.py  runner.py
examples/: detox.json  detox.toml  detox.yaml
test_resources/: test_foo.py
