[build-system]
requires = ["setuptools>=75.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "detox-jar"
dynamic = ["version"]
description = "Command line automation tool in pure Python"
keywords = ["automation", "cli tool", "command line"]
readme = "README.md"
license = {file = "LICENSE"}
authors = [{ name = "Kaloyan Ivanov", email = "kaloyan.ivanov88@gmail.com" }]
urls = { repository = "https://github.com/kaliv0/detox-jar.git" }

requires-python = ">= 3.11"
dependencies = [
    "pyyaml>=6.0.2",
    "ruff>=0.7.3"
]

[project.scripts]
detox = "detox.__main__:main"

[tool.setuptools.dynamic]
version = { attr = "detox.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["detox"]